fix user thumb overflow

--- a/static/css/user.css
+++ b/static/css/user.css
@@ -72,9 +72,8 @@
 /* User thumbnail */
 
 .user-thumb {
-  overflow: hidden;
   margin-bottom: 10px;
-  min-height: 50px;
+  height: 50px;
 
   &.full-width {
     float: none;
